--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "dcrypt": "^0.0.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.1",
     "next": "^13.4.3",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^8.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.0.4"
   }
 }
