Auth issue solved, sign in & sign up feature added

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-GOOGLE_ID = 2839118106-8vcr548jfh6c4e0rpk0it24qedsu9dh9.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET = 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
-MONGODB_URI=mongodb+srv://iambstha:<iambsthapassword>@cluster0.ji7ccoo.mongodb.net/?retryWrites=true&w=majority
+GOOGLE_ID = 947237843926-3bphhc00johjg5lc30cntq10esn5h6ss.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+
+MONGODB_URI=mongodb+srv://bishalshrestha:password%40123@cluster0.utzdgyh.mongodb.net/?retryWrites=true&w=majority
+
 NEXTAUTH_URL = http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
-NEXTAUTH_SECRET=2xuG3lO0dBENoRF4aoTOPxghyXcKOKqGSUMNMoIL/Go=
+NEXTAUTH_SECRET=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
